--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/profile.png"
   name             : "Yichi Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Rise above, focus on science."
   location         : "Stonybrook, NY"
   employer         : "StonyBrook University"
   uri              : # URL
